benchmarking the simd and loop

--- a/python/extend_cpp/bench.ipynb
+++ b/python/extend_cpp/bench.ipynb
@@ -2,12 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import cdan\n",
-    "import numpy as np\n"
+    "import numpy as np"
    ]
   },
   {
@@ -22,14 +22,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "83.4 µs ± 3.07 µs per loop (mean ± std. dev. of 7 runs, 10000 loops each)\n"
+      "462 ns ± 44.3 ns per loop (mean ± std. dev. of 7 runs, 1000000 loops each)\n"
      ]
     }
    ],
@@ -39,14 +39,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "89 µs ± 4.18 µs per loop (mean ± std. dev. of 7 runs, 10000 loops each)\n"
+      "430 ns ± 52.6 ns per loop (mean ± std. dev. of 7 runs, 1000000 loops each)\n"
      ]
     }
    ],
@@ -58,19 +58,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### So... SIMD has to be 4x faster but not... maybe gcc is smart enough to optimise it??"
+    "### S̶o̶.̶.̶.̶ ̶S̶I̶M̶D̶ ̶h̶a̶s̶ ̶t̶o̶ ̶b̶e̶ ̶4̶x̶ ̶f̶a̶s̶t̶e̶r̶ ̶b̶u̶t̶ ̶n̶o̶t̶.̶.̶.̶ ̶m̶a̶y̶b̶e̶ ̶g̶c̶c̶ ̶i̶s̶ ̶s̶m̶a̶r̶t̶ ̶e̶n̶o̶u̶g̶h̶ ̶t̶o̶ ̶o̶p̶t̶i̶m̶i̶s̶e̶ ̶i̶t̶?̶?̶\n",
+    "Everything's ok - except that 400 ns of 420 (96%) is Python object conversion and copying. And yes, GCC is smart enough\n",
+    "## Should implement the c metod for arbitrary vector len"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3.32 µs ± 384 ns per loop (mean ± std. dev. of 7 runs, 100000 loops each)\n"
+      "3.26 µs ± 420 ns per loop (mean ± std. dev. of 7 runs, 100000 loops each)\n"
      ]
     }
    ],
@@ -80,12 +82,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "437 ns ± 52.7 ns per loop (mean ± std. dev. of 7 runs, 1000000 loops each)\n"
+     ]
+    }
+   ],
    "source": [
+    "np_a = np.array(a)\n",
+    "np_b = np.array(b)\n",
+    "%timeit np.add(np_a,np_b)\n",
     "#Duh, that's fast\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
